--- a/index.html
+++ b/index.html
@@ -5,21 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
     <script src="index.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesINDEX.css">
 </head>
 <body>
-    <h1 id="titulo">Abóboras Inteligentes</h1>
-    <div id="tituloenquete">📄RESULTADO DAS ENQUETES📄</div>
-    <div id="enquete">
-        <p id="enq1">a</p>
-        <p id="enq2">a</p>
-        <p id="enq3">a</p>
-        <p id="enq4">a</p>
-        <p id="enq5">a</p></div>
-    <div id="cliqueaqui" onclick="cliqueaqui()">CLIQUE AQUI</div>
-    <img id="imagemabobora" src="img/abobora.webp" alt="Abóbora">
-    <div id="descriçãoimagem">Abóbora</div>
-    <div id="direitosreservados">Aboboras Inc.™ Todos Os Direitos Reservados.</div>
-
+    <h1 id="tituloIndex">DIGITE SEU NOME:</h1>
+    <input type="text" name="nomeusuario" id="nomeUsuario">
+    <a id="indexProximo" href="calculo.html" onclick="proximo()">Próximo</a>
 </body>
 </html>
