--- a/calculo.html
+++ b/calculo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="stylesCALCULO.css">
+    <script src="/js/calculo.js"></script>
+    <link rel="stylesheet" href="css/stylesCALCULO.css">
 </head>
 <body>
     <h1 id="tituloCalculo">EFETUE UMA SOMA</h1>
