--- a/inicio.html
+++ b/inicio.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="stylesINICIO.css">
+    <script src="/js/inicio.js"></script>
+    <link rel="stylesheet" href="css/stylesINICIO.css">
 </head>
 <body>
     <h1 id="titulo">Abóboras Inteligentes</h1>
     <div id="tituloenquete">📄RESULTADO DAS ENQUETES📄</div>
     <div id="enquete">
-        <p id="enq1">a</p>
-        <p id="enq2">a</p>
-        <p id="enq3">a</p>
-        <p id="enq4">a</p>
-        <p id="enq5">a</p></div>
+        <p id="enq1"></p>
+        <p id="enq2"></p>
+        <p id="enq3"></p>
+        <p id="enq4"></p>
+        <p id="enq5"></p></div>
     <div id="cliqueaqui" onclick="cliqueaqui()">APLICAR NOVOS VALORES</div>
     <img id="imagemabobora" src="img/abobora.webp" alt="Abóbora">
     <div id="descriçãoimagem">Abóbora</div>
