--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="stylesINDEX.css">
+    <script src="/js/index.js"></script>
+    <link rel="stylesheet" href="css/stylesINDEX.css">
 </head>
 <body>
     <h1 id="tituloIndex">DIGITE SEU NOME:</h1>
     <input type="text" name="nomeusuario" id="nomeUsuario">
-    <a id="indexProximo" href="calculo.html" onclick="proximo()">Próximo</a>
+    <a id="indexProximo" href="calculo.html">Próximo</a>
 </body>
 </html>
