--- a/calculo.html
+++ b/calculo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
     <script src="/js/calculo.js"></script>
-    <link rel="stylesheet" href="css/stylesCALCULO.css">
+    <link rel="stylesheet" href="/css/stylesCALCULO.css">
 </head>
 <body>
     <h1 id="tituloCalculo">EFETUE UMA SOMA</h1>
