--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abóboras Inteligentes</title>
+    <title>Abóboras Inteligentes hotfix</title>
     <script src="/js/index.js"></script>
-    <link rel="stylesheet" href="css/stylesINDEX.css">
+    <link rel="stylesheet" href="/css/stylesINDEX.css">
 </head>
 <body>
     <h1 id="tituloIndex">DIGITE SEU NOME:</h1>
