--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
     <script src="/js/inicio.js"></script>
-    <link rel="stylesheet" href="css/stylesINICIO.css">
+    <link rel="stylesheet" href="/css/stylesINICIO.css">
 </head>
 <body>
     <h1 id="titulo">Abóboras Inteligentes</h1>
