--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/stylesINDEX.css">
 </head>
 <body>
-    <h1 id="tituloIndex">DIGITE SEU NOME: (DEBUG)</h1>
+    <h1 id="tituloIndex">DIGITE SEU NOME: (DEBUG).</h1>
     <input type="text" name="nomeusuario" id="nomeUsuario">
     <a id="indexProximo" href="calculo.html">Próximo</a>
 </body>
