hotfix temporario emergencial

--- a/inicio.html
+++ b/inicio.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
-    <script src="/js/inicio.js"></script>
-    <link rel="stylesheet" href="/css/stylesINICIO.css">
+    <script src="inicio.js"></script>
+    <link rel="stylesheet" href="stylesINICIO.css">
 </head>
 <body>
     <h1 id="titulo">Abóboras Inteligentes</h1>
