--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes hotfix</title>
-    <script src="/js/index.js"></script>
-    <link rel="stylesheet" href="/css/stylesINDEX.css">
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="stylesINDEX.css">
 </head>
 <body>
-    <h1 id="tituloIndex">DIGITE SEU NOME: (DEBUG).</h1>
+    <h1 id="tituloIndex">DIGITE SEU NOME:</h1>
     <input type="text" name="nomeusuario" id="nomeUsuario">
     <a id="indexProximo" href="calculo.html">Próximo</a>
 </body>
