--- a/calculo.html
+++ b/calculo.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
-    <script src="/js/calculo.js"></script>
+    <script src="/js/calculo.js" defer></script>
     <link rel="stylesheet" href="/css/stylesCALCULO.css">
 </head>
 <body>
+    <div id="homebar">
+        <div id="homebarText">Abóboras Inteligentes</div>
+    </div>
     <h1 id="tituloCalculo">EFETUE UMA SOMA</h1>
     <div id="containerSoma"><input type="number" name="numerosoma1" id="numeroSoma1">
     <p id="simboloMais">+</p> 
