--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
-    <script src="/js/index.js"></script>
+    <script src="/js/index.js" defer></script>
     <link rel="stylesheet" href="/css/stylesINDEX.css">
 </head>
 <body>
+    <div id="homebar">
+        <div id="homebarText">Abóboras Inteligentes</div>
+    </div>
     <h1 id="tituloIndex">DIGITE SEU NOME:</h1>
     <input type="text" name="nomeusuario" id="nomeUsuario">
     <a id="indexProximo" href="calculo.html">Próximo</a>
