--- a/inicio.html
+++ b/inicio.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abóboras Inteligentes</title>
-    <script src="/js/inicio.js"></script>
+    <script src="/js/inicio.js" defer></script>
     <link rel="stylesheet" href="/css/stylesINICIO.css">
 </head>
 <body>
+    <div id="homebar">
+        <div id="homebarText">Abóboras Inteligentes</div>
+    </div>
     <h1 id="titulo">Abóboras Inteligentes</h1>
     <div id="tituloenquete">📄RESULTADO DAS ENQUETES📄</div>
     <div id="enquete">
